--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -13,7 +13,7 @@
                 {% if slider.description %}
                 <p class="wow fadeInUp animated" data-wow-delay="0.2s">{{ slider.description }}</p>
                 {% endif %}
-                <a data-scroll href="#" class="btn btn-light btn-radius btn-brd grd1">थप जानकरी लिनुहोस् !!</a>
+                <a data-scroll href="#about" class="btn btn-light btn-radius btn-brd grd1">थप जानकरी लिनुहोस् !!</a>
             </div> <!-- /.container -->
         </div> <!-- /.camera_caption -->
     </div>
