--- a/unionapp/templates/homepage.html
+++ b/unionapp/templates/homepage.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="message-box">
-                    <h>{{ welcome_content.title }}</h2>
+                    <h2>{{ welcome_content.title }}</h2>
                     <blockquote class="lead">{{ welcome_content.slogan }}</blockquote>
                     <p>{{ welcome_content.description|truncatewords:100|safe }}</div></p>
                     <a href="{% url 'org_detail' welcome_content.id %}" data-scroll class="btn btn-light btn-radius btn-brd grd1">Learn More</a>
@@ -146,7 +146,7 @@
 <div id="gallery" data-scroll-index="4" class="section lb">
     <div class="container">
         <div class="section-title text-center">
-            <h3>Gallery</h3>
+            <h3>फोटोहरु</h3>
             <p class="lead">हाम्रो अविस्मरणीय क्षणहरूको संग्रह</p>
         </div><!-- end title -->
         
