--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -51,7 +51,7 @@
     <!-- END LOADER -->
 
     <div class="topbar text-center hidden-xs">
-        <p>बिशुद्ध पेशागत हकहितका लागि कर्मचारी एकता , <span>पारदर्शी र गतिशिल ब्यवस्थापन आजकाे आवस्यकता !!</span></p>
+        <p>" बिशुद्ध पेशागत हकहितका लागि कर्मचारी एकता , <span>पारदर्शी र गतिशिल ब्यवस्थापन आजकाे आवस्यकता "</span></p>
     </div>
 
     <header class="header header_style_01">
