--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -82,7 +82,7 @@
         </nav>
     </header>
     {% block bodysection %}{% endblock %}
-    <div id="donate" data-scroll-index="7" class="section db">
+    <div id="contact" data-scroll-index="7" class="section db">
     <div class="container">
         <div class="section-title text-center">
             <h3>सुझाव तथा सम्पर्क</h3>
@@ -103,7 +103,7 @@
             }
         </style>
 
-        <div class="row custom-row-spacing">
+        <div  class="row custom-row-spacing">
             <div class="col-md-6">
                 <div class="donate-form-wrapper">
                     <p class="lead">तपाईंको सुझावहरू स्वागत छ। कृपया तलको फारम भर्नुहोस्।</p>
