--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -75,14 +75,14 @@
 						<li><a  href="#gallery">फोटोहरु</a></li>
                         <!--<li><a  href="{% url 'video_list' %}" class="{% block video_list %}{% endblock %}">भिडियो</a></li>-->
                         <!--<li><a  href="{% url 'blog_list' %}" class="{% block blog_active %}{% endblock %}">लेख</a></li>-->
-                        <li><a  href="#contact">सम्पर्क</a></li>
+                        <li><a  href="#donate">सम्पर्क</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     {% block bodysection %}{% endblock %}
-    <div id="contact" data-scroll-index="7" class="section db">
+    <div id="donate" data-scroll-index="7" class="section db">
     <div class="container">
         <div class="section-title text-center">
             <h3>सुझाव तथा सम्पर्क</h3>
@@ -103,7 +103,7 @@
             }
         </style>
 
-        <div  class="row custom-row-spacing">
+        <div class="row custom-row-spacing">
             <div class="col-md-6">
                 <div class="donate-form-wrapper">
                     <p class="lead">तपाईंको सुझावहरू स्वागत छ। कृपया तलको फारम भर्नुहोस्।</p>
