--- a/unionapp/templates/layout/base.html
+++ b/unionapp/templates/layout/base.html
@@ -42,11 +42,11 @@
 <body class="politics_version">
 
     <!-- LOADER -->
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div id="main-ld">
 			<div id="loader"></div>  
 		</div>
-    </div>
+    </div> -->
     <!-- end loader -->
     <!-- END LOADER -->
 
